1-Terminei interface de login 2-funcionalidade para desativar um usuario temporariamente 3-estabelecer sessao do usuario Logado 4-outras logicas do sistema

--- a/src/visao/ConsultarOrdem.form
+++ b/src/visao/ConsultarOrdem.form
@@ -170,9 +170,9 @@
                   <Font name="Yu Gothic UI Semilight" size="14" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Imagens/print.png"/>
+                  <Image iconType="3" name="/Imagens/business-report.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Fatura"/>
+                <Property name="text" type="java.lang.String" value="Relatorio"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
                     <EmptyBorder/>
@@ -208,7 +208,7 @@
                   <Font name="Yu Gothic UI Semilight" size="14" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Imagens/print.png"/>
+                  <Image iconType="3" name="/Imagens/file.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Detalhes"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -439,6 +439,9 @@
                       <Renderer/>
                     </Column>
                   </TableColumnModel>
+                </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI Semilight" size="14" style="1"/>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
