mensagens generalizadas, assentuação

--- a/src/visao/CadastrarServico.form
+++ b/src/visao/CadastrarServico.form
@@ -125,7 +125,7 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Descricao:"/>
+            <Property name="text" type="java.lang.String" value="Descri&#xe7;&#xe3;o:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
@@ -194,7 +194,7 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Duracao:"/>
+            <Property name="text" type="java.lang.String" value="Dura&#xe7;&#xe3;o:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtContacto1">
@@ -216,7 +216,7 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Pecas:"/>
+            <Property name="text" type="java.lang.String" value="Pe&#xe7;as:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtContacto2">
