--- a/src/visao/Faturar.form
+++ b/src/visao/Faturar.form
@@ -109,7 +109,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Finalizar Ordem de Servico"/>
+                <Property name="text" type="java.lang.String" value="Finalizar Ordem de Servi&#xe7;o"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -175,7 +175,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Semilight" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Ordem de Servico ID "/>
+                <Property name="text" type="java.lang.String" value="Ordem de Servi&#xe7;o ID "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtCodigoOrdem">
