--- a/src/visao/CadastrarMecanicos.form
+++ b/src/visao/CadastrarMecanicos.form
@@ -166,7 +166,7 @@
               <Font name="Segoe UI Semilight" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Endereco:"/>
+            <Property name="text" type="java.lang.String" value="Endere&#xe7;o:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtEndereco">
