--- a/src/visao/CadastrarPecas.form
+++ b/src/visao/CadastrarPecas.form
@@ -167,7 +167,7 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Preco Venda Unidade:"/>
+            <Property name="text" type="java.lang.String" value="Pre&#xe7;o Venda Unidade:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
@@ -243,7 +243,7 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Preco Compra Unidade:"/>
+            <Property name="text" type="java.lang.String" value="Pre&#xe7;o Compra Unidade:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtPrecoCompraUnidade">
@@ -270,7 +270,7 @@
               <Font name="Segoe UI Semilight" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Codigo Barras"/>
+            <Property name="text" type="java.lang.String" value="C&#xf3;digo Barras"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
