--- a/src/visao/CadastrarVeiculos.form
+++ b/src/visao/CadastrarVeiculos.form
@@ -116,7 +116,7 @@
               <Font name="Segoe UI Semilight" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Matricula:"/>
+            <Property name="text" type="java.lang.String" value="Matr&#xed;cula:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
@@ -125,7 +125,7 @@
               <Font name="Segoe UI Semilight" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Proprietario:"/>
+            <Property name="text" type="java.lang.String" value="Propriet&#xe1;rio:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
