--- a/src/visao/ConsultarMecanicos.form
+++ b/src/visao/ConsultarMecanicos.form
@@ -349,7 +349,7 @@
                   <Table columnCount="6" rowCount="0">
                     <Column editable="false" title="ID FUNCIONARIO" type="java.lang.Object"/>
                     <Column editable="false" title="NOME" type="java.lang.Object"/>
-                    <Column editable="false" title="ENDERECO" type="java.lang.Object"/>
+                    <Column editable="false" title="ENDERE&#xc7;O" type="java.lang.Object"/>
                     <Column editable="false" title="TELEFONE" type="java.lang.Object"/>
                     <Column editable="false" title="ESPECIALIDADE" type="java.lang.Object"/>
                     <Column editable="false" title="DATA REGISTRO" type="java.lang.Object"/>
