--- a/src/visao/ConsultarVeiculos.form
+++ b/src/visao/ConsultarVeiculos.form
@@ -339,9 +339,9 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="5" rowCount="0">
                     <Column editable="false" title="ID" type="java.lang.Object"/>
-                    <Column editable="false" title="MATRICULA" type="java.lang.Object"/>
+                    <Column editable="false" title="MATR&#xcd;CULA" type="java.lang.Object"/>
                     <Column editable="false" title="MODELO" type="java.lang.Object"/>
-                    <Column editable="false" title="PROPRIETARIO" type="java.lang.Object"/>
+                    <Column editable="false" title="PROPRIET&#xc1;RIO" type="java.lang.Object"/>
                     <Column editable="false" title="DATA REGISTRO" type="java.lang.Object"/>
                   </Table>
                 </Property>
