--- a/src/visao/CriarOrdemServico.form
+++ b/src/visao/CriarOrdemServico.form
@@ -246,7 +246,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI Semilight" size="14" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Data Saida:"/>
+                    <Property name="text" type="java.lang.String" value="Data Sa&#xed;da:"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JComboBox" name="cboStatus">
@@ -346,7 +346,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI Semilight" size="14" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Veiculo :"/>
+                    <Property name="text" type="java.lang.String" value="Ve&#xed;culo :"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtVeiculo">
@@ -411,7 +411,7 @@
                           <Component id="txtIdCliente" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="8" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -481,7 +481,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Numero:"/>
+                <Property name="text" type="java.lang.String" value="N&#xfa;mero:"/>
               </Properties>
             </Component>
             <Component class="utilitarios.JTextFieldBorder" name="txtIdCliente">
@@ -589,7 +589,7 @@
                     <Property name="rows" type="int" value="5"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Descricao do Problema">
+                        <TitledBorder title="Descri&#xe7;&#xe3;o do Problema">
                           <Font PropertyName="font" name="Segoe UI Semilight" size="14" style="1"/>
                         </TitledBorder>
                       </Border>
@@ -614,7 +614,7 @@
                     <Property name="rows" type="int" value="5"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Servico a ser Realizado">
+                        <TitledBorder title="Servi&#xe7;o a ser Realizado">
                           <Font PropertyName="font" name="Segoe UI Semilight" size="14" style="1"/>
                         </TitledBorder>
                       </Border>
@@ -639,7 +639,7 @@
                     <Property name="rows" type="int" value="5"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Observacoes">
+                        <TitledBorder title="Observa&#xe7;&#xf5;es">
                           <Font PropertyName="font" name="Segoe UI Semilight" size="14" style="1"/>
                         </TitledBorder>
                       </Border>
@@ -664,7 +664,7 @@
                     <Property name="rows" type="int" value="5"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Inclua pecas">
+                        <TitledBorder title="Inclua pe&#xe7;as">
                           <Font PropertyName="font" name="Segoe UI Semilight" size="14" style="1"/>
                         </TitledBorder>
                       </Border>
